--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <!-- nav section -->
       <nav class="">
         <div
-          class="navbar bg-white lg:bg-red-500 text-white md:px-12 py-4 rounded-full"
+          class="navbar bg-white lg:bg-red-500 text-white md:px-12 py-3 rounded-full"
         >
           <div class="navbar-start hidden lg:flex">
             <ul class="menu menu-horizontal px-1 font-medium text-xl">
@@ -68,7 +68,7 @@
           <div class="relative">
             <!-- nav logo -->
 
-            <div class="navbar-center">
+            <div class="navbar-center lg:-ml-20">
               <div class="flex items-center gap-4 cursor-pointer">
                 <img src="./images/logo.png" alt="" />
                 <h3 class="text-4xl font-semibold text-red-500 lg:text-white">
@@ -122,7 +122,7 @@
                   placeholder="Search here"
                 />
                 <i
-                  class="fa-solid fa-magnifying-glass absolute text-gray-600 text-xl top-4 -right-[225px]"
+                  class="fa-solid fa-magnifying-glass absolute text-gray-600 text-xl top-4 -right-[230px]"
                 ></i>
               </div>
             </div>
@@ -136,7 +136,7 @@
 
         <div id="slide1" class="carousel-item relative w-full">
           <div
-            class="hero min-h-[calc(90vh-100px)] bg-hero-banner1 mt-14 rounded-lg"
+            class="hero min-h-[calc(90vh-100px)] bg-hero-banner1 mt-8 lg:mt-14 rounded-lg"
           >
             <div class="hero-overlay rounded-lg bg-opacity-40"></div>
             <div class="text-center text-white">
@@ -286,7 +286,7 @@
       <!-- deal of the day -->
       <section>
         <div
-          class="mt-10 lg:mt-40 flex flex-col gap-4 md:text-center md:flex-col lg:justify-between lg:flex-row items-center"
+          class="mt-0 lg:mt-40 flex flex-col gap-4 md:text-center md:flex-col lg:justify-between lg:flex-row items-center"
         >
           <div class="space-y-6 text-center lg:text-start">
             <h2 class="text-4xl font-bold">Deal of the day</h2>
@@ -364,7 +364,7 @@
             </button>
             <dialog
               id="my_modal_5"
-              class="modal modal-bottom max-w-[400px] ml-4 lg:mx-auto sm:modal-middle"
+              class="modal modal-bottom max-w-[400px] ml-4 mx-auto sm:modal-middle"
             >
               <form
                 method="dialog"
@@ -641,7 +641,7 @@
           Latin literature from 45 BC, making it over 2000 years old.
         </p>
         <!-- left right col and img -->
-        <div class="grid grid-cols-1 lg:grid-cols-3 mt-10 gap-8">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mt-10 gap-8">
           <!-- left-col -->
           <div class="order-2 lg:order-1">
             <!-- single item -->
@@ -705,7 +705,7 @@
           </div>
 
           <!-- image -->
-          <div class="order-1 lg:order-2 mx-auto">
+          <div class="order-1 lg:order-2 mx-auto md:col-span-2 lg:col-span-1">
             <img src="./images/whychoose1.png" alt="" />
           </div>
           <!-- right-col -->
@@ -776,7 +776,7 @@
     </main>
     <!-- footer section -->
     <footer>
-      <div class="bg-[#121212] text-white py-32 px-3 lg:px-40 mt-32">
+      <div class="bg-[#121212] text-white py-32 px-3 lg:px-40 mt-20 lg:mt-32">
         <div>
           <div class="flex items-center justify-center">
             <img src="./images/logo.png" alt="" />
