--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
                 <p class="font-medium">
                   We supply highly quality organic products
                 </p>
-                <button class="btn bg-[#F85559] border-none text-white">
+                <button
+                  class="btn bg-[#F85559] border-none text-white hover:text-[#F85559]"
+                >
                   Shop Now
                 </button>
               </div>
@@ -548,7 +550,9 @@
           </div>
         </div>
         <div class="mt-10 flex justify-center">
-          <button class="bg-[#F85559] btn text-white">Shop All</button>
+          <button class="bg-[#F85559] btn text-white hover:text-[#F85559]">
+            Shop All
+          </button>
         </div>
       </section>
       <!-- deal of the day end-->
